hphp/test/slow/reified_generics/reify-trait.php.expectf
Fatal error: Invalid to use a reified type within a trait's type parameters in %s on line 3
